# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  README.md  frontend-changes.md  pyproject.toml  temp_mcp.bat
.claude/: settings.local.json
.claude/commands/: code-quality.md
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_models.py  test_session_manager.py
frontend/: index.html  script.js  style.css
scripts/: README.md  check.bat  check.sh  format.bat  format.sh  quality.bat  quality.sh
